[package]
name = "ferrismq"
version = "0.1.0"
edition = "2021"

[dependencies]
storage = { path = "components/storage" }
protos = { path = "components/protos" }
tonic = "0.6"
prost = "0.9"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "0.8", features = ["serde", "v4"] }

[workspace]
members = [
  "components/protos",
  "components/model",
  "components/client",
  "components/server",
  "components/storage",
]